// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PureStackCardActions Should not render edit/delete buttons if functions not defined 1`] = `
<div
  className="cardActions"
>
  <ComponentWrapper
    className="buttonWrapper"
    permission="open"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <WithStyles(ForwardRef(Tooltip))
      disableHoverListener={true}
      placement="bottom-start"
      title="Cannot be opened until resource is ready"
    >
      <div>
        <ForwardRef
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
        >
          Open
        </ForwardRef>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </ComponentWrapper>
  <ComponentWrapper
    className="buttonWrapper"
    permission="delete"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <SecondaryActionButton
      aria-controls="more-menu"
      aria-haspopup="true"
      fullWidth={true}
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(Icon))
        style={
          Object {
            "color": "inherit",
          }
        }
      >
        more_vert
      </WithStyles(ForwardRef(Icon))>
    </SecondaryActionButton>
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="more-menu"
      keepMounted={true}
      onClose={[Function]}
      open={false}
      transformOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
    >
      <ForwardRef
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={false}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Logs
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="edit"
        shouldRender={false}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Edit
      </ForwardRef>
      <ForwardRef
        disableTooltip={true}
        disabled={false}
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={true}
        tooltipText="Resource is already shared within the project"
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Share
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="edit"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Restart
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="open"
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Copy snippet
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={false}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Delete
      </ForwardRef>
    </WithStyles(ForwardRef(Menu))>
  </ComponentWrapper>
</div>
`;

exports[`PureStackCardActions Should not render edit/delete/share/restart buttons if current user is not the owner 1`] = `
<div
  className="cardActions"
>
  <ComponentWrapper
    className="buttonWrapper"
    permission="open"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <WithStyles(ForwardRef(Tooltip))
      disableHoverListener={true}
      placement="bottom-start"
      title="Cannot be opened until resource is ready"
    >
      <div>
        <ForwardRef
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
        >
          Open
        </ForwardRef>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </ComponentWrapper>
</div>
`;

exports[`PureStackCardActions Should render Open as disabled if stack is not ready 1`] = `
<div
  className="cardActions"
>
  <ComponentWrapper
    className="buttonWrapper"
    permission="open"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <WithStyles(ForwardRef(Tooltip))
      disableHoverListener={false}
      placement="bottom-start"
      title="Cannot be opened until resource is ready"
    >
      <div>
        <ForwardRef
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
        >
          Open
        </ForwardRef>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </ComponentWrapper>
  <ComponentWrapper
    className="buttonWrapper"
    permission="delete"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <SecondaryActionButton
      aria-controls="more-menu"
      aria-haspopup="true"
      fullWidth={true}
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(Icon))
        style={
          Object {
            "color": "inherit",
          }
        }
      >
        more_vert
      </WithStyles(ForwardRef(Icon))>
    </SecondaryActionButton>
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="more-menu"
      keepMounted={true}
      onClose={[Function]}
      open={false}
      transformOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
    >
      <ForwardRef
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={false}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Logs
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="edit"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Edit
      </ForwardRef>
      <ForwardRef
        disableTooltip={true}
        disabled={false}
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={true}
        tooltipText="Resource is already shared within the project"
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Share
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="edit"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Restart
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="open"
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Copy snippet
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Delete
      </ForwardRef>
    </WithStyles(ForwardRef(Menu))>
  </ComponentWrapper>
</div>
`;

exports[`PureStackCardActions creates correct snapshot 1`] = `
<div
  className="cardActions"
>
  <ComponentWrapper
    className="buttonWrapper"
    permission="open"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <WithStyles(ForwardRef(Tooltip))
      disableHoverListener={true}
      placement="bottom-start"
      title="Cannot be opened until resource is ready"
    >
      <div>
        <ForwardRef
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
        >
          Open
        </ForwardRef>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </ComponentWrapper>
  <ComponentWrapper
    className="buttonWrapper"
    permission="delete"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <SecondaryActionButton
      aria-controls="more-menu"
      aria-haspopup="true"
      fullWidth={true}
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(Icon))
        style={
          Object {
            "color": "inherit",
          }
        }
      >
        more_vert
      </WithStyles(ForwardRef(Icon))>
    </SecondaryActionButton>
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="more-menu"
      keepMounted={true}
      onClose={[Function]}
      open={false}
      transformOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
    >
      <ForwardRef
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={false}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Logs
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="edit"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Edit
      </ForwardRef>
      <ForwardRef
        disableTooltip={true}
        disabled={false}
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={true}
        tooltipText="Resource is already shared within the project"
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Share
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="edit"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Restart
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="open"
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Copy snippet
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Delete
      </ForwardRef>
    </WithStyles(ForwardRef(Menu))>
  </ComponentWrapper>
</div>
`;

exports[`PureStackCardActions should not render button if userAction for that button is false 1`] = `
<div
  className="cardActions"
>
  <ComponentWrapper
    className="buttonWrapper"
    permission="open"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <WithStyles(ForwardRef(Tooltip))
      disableHoverListener={true}
      placement="bottom-start"
      title="Cannot be opened until resource is ready"
    >
      <div>
        <ForwardRef
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
        >
          Open
        </ForwardRef>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </ComponentWrapper>
  <ComponentWrapper
    className="buttonWrapper"
    permission="delete"
    userPermissions={
      Array [
        "open",
        "delete",
        "edit",
      ]
    }
  >
    <SecondaryActionButton
      aria-controls="more-menu"
      aria-haspopup="true"
      fullWidth={true}
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(Icon))
        style={
          Object {
            "color": "inherit",
          }
        }
      >
        more_vert
      </WithStyles(ForwardRef(Icon))>
    </SecondaryActionButton>
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="more-menu"
      keepMounted={true}
      onClose={[Function]}
      open={false}
      transformOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
    >
      <ForwardRef
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={false}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Logs
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="edit"
        shouldRender={false}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Edit
      </ForwardRef>
      <ForwardRef
        disableTooltip={true}
        disabled={false}
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={true}
        tooltipText="Resource is already shared within the project"
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Share
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="edit"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Restart
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="open"
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Copy snippet
      </ForwardRef>
      <ForwardRef
        onClick={[Function]}
        requiredPermission="delete"
        shouldRender={true}
        userPermissions={
          Array [
            "open",
            "delete",
            "edit",
          ]
        }
      >
        Delete
      </ForwardRef>
    </WithStyles(ForwardRef(Menu))>
  </ComponentWrapper>
</div>
`;

exports[`StackCardActions passes props down to child component as well as current user id 1`] = `
<PureStackCardActions
  classes={
    Object {
      "buttonWrapper": "StackCardActions-buttonWrapper-2",
      "cardActions": "StackCardActions-cardActions-1",
    }
  }
  copySnippet={[MockFunction copySnippet]}
  currentUserId="owner-id"
  deletePermission="delete"
  deleteStack={[MockFunction deleteStack]}
  editPermission="edit"
  editStack={[MockFunction editStack]}
  openPermission="open"
  openStack={[MockFunction openStack]}
  restartStack={[MockFunction restartStack]}
  shareStack={[MockFunction shareStack]}
  stack={
    Object {
      "displayName": "expectedDisplayName",
      "id": "abc1234",
      "shared": "private",
      "status": "ready",
      "type": "expectedType",
      "users": Array [
        "owner-id",
      ],
    }
  }
  userActions={
    Object {
      "delete": true,
      "edit": true,
      "logs": true,
      "restart": true,
      "share": true,
    }
  }
  userPermissions={
    Array [
      "open",
      "delete",
      "edit",
    ]
  }
/>
`;
